Add project overview description to CLAUDE.md